0.14.x/_sources/api/skimage.util.rst.txt
.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`util`
===================
.. automodule:: skimage.util

.. currentmodule:: skimage.util
.. autosummary::

   skimage.util.img_as_float32
   skimage.util.img_as_float64
   skimage.util.img_as_float
   skimage.util.img_as_int
   skimage.util.img_as_uint
   skimage.util.img_as_ubyte
   skimage.util.img_as_bool
   skimage.util.dtype_limits
   skimage.util.view_as_blocks
   skimage.util.view_as_windows
   skimage.util.pad
   skimage.util.crop
   skimage.util.montage
   skimage.util.montage2d
   skimage.util.random_noise
   skimage.util.regular_grid
   skimage.util.regular_seeds
   skimage.util.apply_parallel
   skimage.util.invert
   skimage.util.unique_rows



img_as_float32
--------------

.. autofunction:: skimage.util.img_as_float32


.. include:: skimage.util.img_as_float32.examples

img_as_float64
--------------

.. autofunction:: skimage.util.img_as_float64


.. include:: skimage.util.img_as_float64.examples

img_as_float
------------

.. autofunction:: skimage.util.img_as_float


.. include:: skimage.util.img_as_float.examples

img_as_int
----------

.. autofunction:: skimage.util.img_as_int


.. include:: skimage.util.img_as_int.examples

img_as_uint
-----------

.. autofunction:: skimage.util.img_as_uint


.. include:: skimage.util.img_as_uint.examples

img_as_ubyte
------------

.. autofunction:: skimage.util.img_as_ubyte


.. include:: skimage.util.img_as_ubyte.examples

img_as_bool
-----------

.. autofunction:: skimage.util.img_as_bool


.. include:: skimage.util.img_as_bool.examples

dtype_limits
------------

.. autofunction:: skimage.util.dtype_limits


.. include:: skimage.util.dtype_limits.examples

view_as_blocks
--------------

.. autofunction:: skimage.util.view_as_blocks


.. include:: skimage.util.view_as_blocks.examples

view_as_windows
---------------

.. autofunction:: skimage.util.view_as_windows


.. include:: skimage.util.view_as_windows.examples

pad
---

.. autofunction:: skimage.util.pad


.. include:: skimage.util.pad.examples

crop
----

.. autofunction:: skimage.util.crop


.. include:: skimage.util.crop.examples

montage
-------

.. autofunction:: skimage.util.montage


.. include:: skimage.util.montage.examples

montage2d
---------

.. autofunction:: skimage.util.montage2d


.. include:: skimage.util.montage2d.examples

random_noise
------------

.. autofunction:: skimage.util.random_noise


.. include:: skimage.util.random_noise.examples

regular_grid
------------

.. autofunction:: skimage.util.regular_grid


.. include:: skimage.util.regular_grid.examples

regular_seeds
-------------

.. autofunction:: skimage.util.regular_seeds


.. include:: skimage.util.regular_seeds.examples

apply_parallel
--------------

.. autofunction:: skimage.util.apply_parallel


.. include:: skimage.util.apply_parallel.examples

invert
------

.. autofunction:: skimage.util.invert


.. include:: skimage.util.invert.examples

unique_rows
-----------

.. autofunction:: skimage.util.unique_rows


.. include:: skimage.util.unique_rows.examples

